[package]
name = "rgbe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version= "^1.14.3", features=["derive"]}
half = {version="^2.3.1", features=["bytemuck"]}
image = {version = "^0.24.8", default_features=false, features=["png", "hdr"] }

[[bin]]

name="hdr2rgbe-png"