[package]
name = "rgbe"
version = "0.0.1-alpha"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "A library for handling RGBE-format HDR images."
authors = ["George Steel"]
readme = "README.md"

repository = "https://github.com/george-steel/rgbe-rs"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version= "^1.14.3", features=["derive"]}
half = {version="^2.3.1", features=["bytemuck"]}
image = {version = "^0.24.8", default_features=false, features=["png", "hdr"] }

[[bin]]

name="hdr2rgbe-png"