[package]
name = "rgbe"
version = "0.0.1"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "A library for loading and handling RGBE-format HDR textures."
authors = ["George Steel"]
keywords = ["graphics", "gamedev", "hdr", "texture"]
categories = ["rendering::data-formats", "graphics", "game-development", "multimedia::images"]

readme = "README.md"
repository = "https://github.com/george-steel/rgbe-rs"
homepage = "https://github.com/george-steel/rgbe-rs"
documentation = "https://docs.rs/rgbe"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version= "1.14.3", features=["derive"]}
half = {version="2.3.1", features=["bytemuck"]}
image = {version = "0.24.8", default_features=false, features=["png", "hdr"] }

[[bin]]

name="hdr2rgbe-png"